<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.android.iquicker.MainActivity" >

    <TextView
        android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/notice" />
    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/notice"
        android:text="@string/tip_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/textView1"
        android:id="@+id/textView2"
        android:text="@string/tip_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
		android:id="@+id/textView3"
		android:layout_below="@id/textView2"
        android:text="@string/tip_3" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/textView3"
        android:id="@+id/textView4"
        android:text="@string/tip_4" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/textView4"
        android:id="@+id/textView5"
        android:text="@string/tip_5" />

    <LinearLayout
        android:id="@+id/twobtns"
        android:paddingTop="60dp"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_below="@id/textView4"
    	
    	>
    	
    	<Button
	        android:id="@+id/buttonReOpen"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_weight="1"
	        android:textColor="#fff"
	        android:text="@string/show" />
    
    	<Button
	        android:id="@+id/buttonClose"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_weight="1"
	        android:textColor="#fff"
	        android:text="@string/hide" />
        
    </LinearLayout>
    
    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_below="@id/twobtns"
    	
    	>
    	<Button
        	android:id="@+id/buttonOK"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/twobtns"
	        android:textColor="#fff"
	        android:text="@string/ok" />
    	</LinearLayout>

</RelativeLayout>